<resources>
    <string name="english">English</string>
    <string name="description">Description:</string>
    <string name="chinese">Chinese</string>
    <string name="korean">Korean</string>
    <string name="app_name">TutorMe</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">TutorMe</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full Name</string>
    <string name="hint_age">Age:</string>
    <string name="hint_degree">Degree </string>
    <string name="hint_contact">Contact:</string>
    <string name="btn_next">NEXT</string>
    <string name="btn_login">LOGIN</string>
    <string name="tutorsThatLikeMe">Tutors that like me:</string>
    <string name="studentsThatLikeMe">Students that like me:</string>
    <string name="btn_link_to_register">Not a member? Get registered in TutorMe now!</string>
    <string name="btn_link_to_login">Already registered? Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="alphabet_array">
        <item> </item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="hint_course">Course</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="becomeTutorToast">You have successfully signed up as a tutor!</string>
    <string name="searchAndBecome">Search for a course and become a tutor:</string>
    <string name="searchAndChoose">Search for a course and choose a tutor:</string>
    <string name="searchAndChooseStudent">Search for a course and show my Students:</string>
    <string name="searchAndChooseTutor">Search for a course and show my Tutors:</string>
    <string name="becomeATutor">Become a tutor</string>
    <string name="becomeAStudent">Become a student</string>
    <string name="reqSent">Request Sent</string>
    <string name="reqAccepted">Request Accepted</string>
    <string name="reqRejected">Request Rejected</string>
    <string name="search">Search for a tutor</string>
    <string name="myStudents">My Students</string>
    <string name="myTutors">My Tutors</string>
    <string name="myProfile">My Profile</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="cantonese">Cantonese</string>
    <string name="hint_suburb">Suburb:</string>
    <string name="find_class">Find Class</string>
    <string name="withdraw">Withdraw</string>
    <string name="withdrawFrom">Withdraw from:</string>
    <string name="showMyStudents">Show My Students</string>
    <string name="showMyTutors">Show My Tutors</string>
    <string name="changeLanguage">Change Language</string>
    <string name="empty">All fields must be filled in!</string>
</resources>