<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingHorizontal="10dp"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Spinner
        android:id="@+id/static_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp" />

        <CheckBox
            android:id="@+id/checkBoxMonday"
            android:text="@string/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <CheckBox
            android:id="@+id/checkBoxTuesday"
            android:text="@string/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <CheckBox
            android:id="@+id/checkBoxWednesday"
            android:text="@string/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <CheckBox
            android:id="@+id/checkBoxThursday"
            android:text="@string/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <CheckBox
            android:id="@+id/checkBoxFriday"
            android:text="@string/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <CheckBox
            android:id="@+id/checkBoxSaturday"
            android:text="@string/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <CheckBox
            android:id="@+id/checkBoxSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/apply" />
    </LinearLayout>

</LinearLayout>
