<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.vinguyen.tutorme3.BecomeTutorFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:text="@string/searchAndChoose" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <AutoCompleteTextView
                android:id="@+id/courseAC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_course"
                android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/findTutor"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:background="#ffe24d"
                android:text="@string/find_class"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>
